<resources>
    <string name="app_name">Crazy converter</string>
    <string name="input_text">Input number(cm)</string>
    <string name="title">Crazy converter</string>
    <string name="convert">CONVERT</string>
    <string name="reset">RESET</string>
    <string name="name">Alisa Bazeliuk</string>
    <string name="kilometre">Kilometre</string>
    <string name="centimetre">Centimetre</string>
    <string name="mile">Mile</string>
    <string name="yard">Yard</string>
    <string name="foot">Foot</string>
    <string name="kilometre0">00.00</string>
    <string name="centimetre0">00.00</string>
    <string name="mile0">00.00</string>
    <string name="yard0">00.00</string>
    <string name="foot0">00.00</string>
</resources>
