<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textColor="@color/titleColor"
        android:textSize="30dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputNumberField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="input number(cm)"
        android:inputType="numberDecimal"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/convertId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="180dp"
        android:background="@color/colorConvert"
        android:text="@string/convert" />

    <Button
        android:id="@+id/resetId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="180dp"
        android:background="@color/colorReset"
        android:text="@string/reset" />

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:background="@color/colorConvert"></FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="260dp"
        android:text="@string/kilometre" />

    <TextView
        android:id="@+id/kilometre00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="260dp"
        android:text="@string/kilometre0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="300dp"
        android:text="@string/centimetre" />

    <TextView
        android:id="@+id/centimetre00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="300dp"
        android:text="@string/centimetre0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="340dp"
        android:text="@string/mile" />

    <TextView
        android:id="@+id/mile00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="340dp"
        android:text="@string/mile0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="380dp"
        android:text="@string/yard" />

    <TextView
        android:id="@+id/yard00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="380dp"
        android:text="@string/yard0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="420dp"
        android:text="@string/foot" />

    <TextView
        android:id="@+id/foot00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="420dp"
        android:text="@string/foot0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="460dp"
        android:text="@string/name" />


</RelativeLayout>